SST117 - Interface, saving, and particles added.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -69,6 +69,20 @@ AppliedDefaultGraphicsPerformance=Maximum
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Maps/Menu.Menu
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/Maps/Menu.Menu
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/Blueprints/Misc/bpGameMode.bpGameMode_C
+GlobalDefaultServerGameMode=None
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -109,19 +123,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/Main.Main
-LocalMapOptions=
-TransitionMap=None
-bUseSplitscreen=True
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/Main.Main
-ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/Blueprints/bpGameMode.bpGameMode_C
-GlobalDefaultServerGameMode=None
-
 
